--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.3.1",
-    "alertifyjs": "^1.11.1",
+    "@fortawesome/fontawesome-free": "5.9.0",
+    "alertifyjs": "1.11.4",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "jquery": "^3.3.1",
-    "vue": "^2.5.17",
+    "jquery": "3.4.1",
+    "vue": "2.6.10",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1",
+    "vue-router": "3.0.7",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.0.1"
+    "vuex": "3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.0.3",
-    "@vue/cli-plugin-eslint": "3.0.3",
-    "@vue/cli-service": "3.0.3",
-    "@vue/eslint-config-standard": "3.0.3",
-    "node-sass": "^4.9.0",
+    "@vue/cli-plugin-babel": "3.9.2",
+    "@vue/cli-plugin-eslint": "3.9.2",
+    "@vue/cli-service": "3.9.2",
+    "@vue/eslint-config-standard": "4.0.0",
+    "node-sass": "4.12.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "2.6.10"
   },
   "eslintConfig": {
     "root": true,
